--- a/IBM8Aug25_CSharpIntro/IBM8Aug25_CSharpIntro.csproj
+++ b/IBM8Aug25_CSharpIntro/IBM8Aug25_CSharpIntro.csproj
@@ -53,6 +53,7 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
+    <None Include="PPT\06Aug2025IBM_Classflow.pptx" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
